css/tabs.less: fix the "Chrome gap"
That's not how this should be fixed, but it at least helps getting
rid of that nasty gap for now.

--- a/public/css/icinga/tabs.less
+++ b/public/css/icinga/tabs.less
@@ -8,7 +8,7 @@ ul.tabs {
 
 .controls ul.tabs {
   margin-left: 0em;
-  margin-top: -3.6em;
+  margin-top: -3.54em;
   height: 2.6em;
   overflow: hidden;
 }
